--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,4 @@ bind-key -n M-S-Down resize-pane -D
 bind-key -n M-S-Left resize-pane -L
 bind-key -n M-S-Right resize-pane -R
 bind-key -n F7 copy-mode
+set -g mouse on
