--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,11 @@
 unbind C-b
 set -g prefix C-q
+bind-key -r k select-pane -U
+bind-key -r j select-pane -D
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
+
+
 bind-key -n F2 new-window -c "#{pane_current_path}" \; rename-window "-"
 
 bind-key -n C-F2 display-panes \; split-window -h -c "#{pane_current_path}"
