--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,21 +4,10 @@ bind-key -r k select-pane -U
 bind-key -r j select-pane -D
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
-
-
-bind-key -n F2 new-window -c "#{pane_current_path}" \; rename-window "-"
-
-bind-key -n C-F2 display-panes \; split-window -h -c "#{pane_current_path}"
-bind-key -n S-F2 display-panes \; split-window -v -c "#{pane_current_path}"
-bind-key -n F3 previous-window
-bind-key -n F4 next-window
-bind-key -n M-Up display-panes \; select-pane -U
-bind-key -n M-Down display-panes \; select-pane -D
-bind-key -n M-Left display-panes \; select-pane -L
-bind-key -n M-Right display-panes \; select-pane -R
-bind-key -n M-S-Up resize-pane -U
-bind-key -n M-S-Down resize-pane -D
-bind-key -n M-S-Left resize-pane -L
-bind-key -n M-S-Right resize-pane -R
+setw -g mode-keys vi
+bind-key -r K resize-pane -U 1
+bind-key -r J resize-pane -D 1
+bind-key -r H resize-pane -L 1
+bind-key -r L resize-pane -R 1
 bind-key -n F7 copy-mode
 set -g mouse on
